--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,6 @@ spring:
 mybatis:
   mapper-locations:
     - /mappers/*.xml
+
+file:
+  path: C:/junil/yongsang/springboot/stussy-clone-20220930-yongsang/src/main/resources/static/upload/
