--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,30 @@ spring:
     user:
       name: test@naver.com
       password: 1q2w3e4r!
+    oauth2:
+      client:
+        registration:
+          google:
+            clientId: 770420667392-s4bsvt592bvpk67nvfrujgbd8dsedriu.apps.googleusercontent.com
+            clientSecret: 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
+            scope:
+              - email
+              - profile
+          naver:
+            clientId: GWKv4_aBLWfRsCb_iO3x
+            clientSecret: FohnV8W4VT
+            scope:
+              - email
+              - name
+            clientName: Naver
+            authorizationGrantType: authorization_code
+            redirectUri: http://localhost:8000/login/oauth2/code/naver
+        provider:
+          naver:
+            authorizationUri: 	https://nid.naver.com/oauth2.0/authorize
+            tokenUri: 	https://nid.naver.com/oauth2.0/token
+            userInfoUri: https://openapi.naver.com/v1/nid/me
+            userNameAttribute: response
 
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
